2007-11-14  David Gilbert  <david.gilbert@object-refinery.com>

	* source/org/jfree/chart/renderer/category/StatisticalBarRenderer.java
	(errorIndicatorStroke): New field,
	(StatisticalBarRenderer): Initialise new field,
	(getErrorIndicatorStroke): New method,
	(setErrorIndicatorStroke): Likewise,
	(drawHorizontalItem): Fix drawBarOutline and gradientPaintTransformer
	omissions, and use new errorIndicatorStroke field,
	(drawVerticalItem): Likewise,
	(equals): Updated for new field,
	(writeObject): Likewise,
	(readObject): Likewise.

----------  JFREECHART 1.0.7 RELEASED ------------------------

2007-11-14  David Gilbert  <david.gilbert@object-refinery.com>

	* swt/org/jfree/experimental/chart/swt/ChartComposite.java
	(ChartComposite): Create canvas with SWT.DOUBLE_BUFFERED,
	(getChartRenderingInfo): New method,
	(isDomainZoomable): Likewise,
	(setDomainZoomable): Likewise,
	(isRangeZoomable): Likewise,
	(setRangeZoomable): Likewise.

2007-11-14  David Gilbert  <david.gilbert@object-refinery.com>

	* source/org/jfree/chart/plot/CategoryPlot.java
	(setWeight): Fire change event,
	(setFixedDomainAxisSpace(AxisSpace)): Delegate to new method,
	(setFixedDomainAxisSpace(AxisSpace, boolean)): New method,
	(setFixedRangeAxisSpace(AxisSpace)): Delegate to new method,
	(setFixedRangeAxisSpace(AxisSpace, boolean)): New method,
	* source/org/jfree/chart/plot/CombinedDomainCategoryPlot.java
	(setFixedRangeAxisSpaceForSubplots): Updated,
	* source/org/jfree/chart/plot/CombinedRangeCategoryPlot.java
	(setFixedDomainAxisSpaceForSubplots): Updated.

2007-11-13  David Gilbert  <david.gilbert@object-refinery.com>

	* source/org/jfere/chart/HashUtilities.java
	(hashCode(int, Comparable)): New method,
	* source/org/jfree/chart/entity/CategoryLabelEntity.java
	(equals): New method,
	(hashCode): Likewise.

2007-11-13  David Gilbert  <david.gilbert@object-refinery.com>

	* source/org/jfree/chart/axis/ModuloAxis.java
	(equals): Implemented.
